--- a/addons/mail/views/mail_mail_views.xml
+++ b/addons/mail/views/mail_mail_views.xml
@@ -40,9 +40,7 @@
                         </group>
                         <notebook>
                             <page string="Body" name="body">
-                            <field name="body_html" widget="html"
-                                   options="{'sandboxedPreview': true}"
-                                   attrs="{'readonly': [('state', 'not in', ['outgoing', 'exception'])]}"/>
+                                <field name="body_content"/>
                             </page>
                             <page string="Advanced" name="advanced" groups="base.group_no_one">
                                 <group>
